# ibisos

./: .gitignore  .gitmodules  CMakeCache.txt  Makefile  README.md  build.sh  cmake_install.cmake  qemu  qemu.sh
compiler/: CMakeLists.txt  LICENSE
output/i686-pc-none-elf/isodir/boot/grub/: grub.cfg
src/: CMakeLists.txt  debugger.cpp  kernel.cpp  main.cpp  string.cpp
src/SATA/: ahci.h  main.c  read.c  write.c
src/asm/i686/: boot.asm
src/boot/: boot.asm  linker.ld
src/bootloader/x86-64/: bootloader.asm
src/debug/: debug.cpp
src/devices/: pci.cpp
src/fonts/: psf.cpp
src/include/: cstddef  cstdint  cstring  debugger  stdlib.h
src/include/c/: debugger.h  stddef.h  stdint.h  string.h
src/include/debug/: debug.h
src/include/devices/: pci.h
src/include/graphics/: colors.h
src/include/storage/: ata.h
src/minikernel/: minikernel.cpp
src/storage/: ata.cpp
src/vesa/: vesa.cpp
